Fixed sidebar z-index

--- a/static/styles/map.css
+++ b/static/styles/map.css
@@ -52,6 +52,10 @@
     padding-right: 5%;
 }
 
+.leaflet-top{
+    z-index:1500
+}
+
 
 .info h4 {
     margin: 0 0 5px;
